# SirarmTemplate

./: pyproject.toml
src/sirarm_template/ai/: model_module.py
src/sirarm_template/ai/old/: model_module.py
src/sirarm_template/utils/: ops.py  torch.py
